--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@ body {
 }
 
 .header-container {
-    /* height: 450px; */
-    height: 50vh;
-    padding: 0 400px;
+    min-height: 50vh;
+    padding: 0 20%;
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
@@ -29,7 +28,6 @@ body {
             font-size: 18px;
             color: #E5E7EB;
             margin-left: auto;
-
         }
 
             a {
@@ -46,6 +44,9 @@ body {
 
         .header-text {
             min-width: 325px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
 
         }
     
@@ -58,25 +59,29 @@ body {
             .subtext {
                 font-size: 18px;
                 color: #E5E7EB;
-                margin: 15px 0;
             }
 
-            button {
+            .header-text button {
                 background-color: #3882F6;
                 font-size: 18px;
                 font-weight: 700;
                 color: #E5E7EB;
                 padding: 10px 30px;
                 border-radius: 10px;
+                margin-top: 10px;
             }
 
         .header-image {
-            width: 800px;
-            height: 250px;
+
+            
         }
+            .header-image>img {
+                width: 550px;
+                height: 250px;
+            }
     
     .inf-container {
-        height: 45vh;
+        min-height: 50vh;
         display: flex;
         flex-direction: column;
         align-items: center;
