--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
     margin:0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header-container {
@@ -17,7 +20,8 @@ body {
 
         .logo {
             color: #F9FAF8;  
-            font-size: 24px; 
+            font-size: 24px;
+            font-weight: 700; 
         }
 
         .links {
@@ -113,4 +117,25 @@ body {
                     border: 5px solid #3882F6;
                     border-radius: 15px;
                 }
+    .quote-container {
+        background-color: #E5E7EB;
+        min-height: 50vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0 30%;
+    }
+        .quote-text {
+            font-size: 36px;
+            font-style: italic;
+            font-weight: 300;
+            color: #1F2937;
+        }
+
+        .quote-author {
+            font-weight: 700;
+            font-size: 24px;
+            align-self: flex-end;
+        }
 
