--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.header-container {
+.header-section {
     min-height: 50vh;
     padding: 0 20%;
     background-color: #1F2937;
@@ -28,7 +28,7 @@ body {
             list-style: none;
             padding: 0;
             display: flex;
-            gap: 15px;
+            gap: 20px;
             font-size: 18px;
             color: #E5E7EB;
             margin-left: auto;
@@ -73,69 +73,123 @@ body {
                 padding: 10px 30px;
                 border-radius: 10px;
                 margin-top: 10px;
+                cursor: pointer;
             }
 
-        .header-image {
+            .header-text button:hover {
+                background-color: #5c96f3;
+            }
 
-            
-        }
             .header-image>img {
                 width: 550px;
                 height: 250px;
             }
     
-    .inf-container {
-        min-height: 50vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
+.inf-section {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+    .inf-title {
+        font-size: 36px;
+        font-weight: 800;
+        color: #1F2937;
     }
 
-        .inf-title {
-            font-size: 36px;
-            font-weight: 800;
-            color: #1F2937;
+    .inf-list-container {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        gap: 70px;
+
+    }
+
+        .inf-list-container li {
+            width: 150px;
+            text-align: center;
         }
 
-        .inf-list-container {
-            display: flex;
-            list-style: none;
-            padding: 0;
-            gap: 70px;
-
-        }
-
-            .inf-list-container li {
+            .inf-list-container img {
                 width: 150px;
-                text-align: center;
+                height: 150px;
+                border: 5px solid #3882F6;
+                border-radius: 15px;
             }
 
-                .inf-list-container img {
-                    width: 150px;
-                    height: 150px;
-                    border: 5px solid #3882F6;
-                    border-radius: 15px;
-                }
-    .quote-container {
-        background-color: #E5E7EB;
-        min-height: 50vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 0 30%;
+.quote-section {
+    background-color: #E5E7EB;
+    min-height: 55vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 30%;
+}
+    .quote-text {
+        font-size: 36px;
+        font-style: italic;
+        font-weight: 300;
+        color: #1F2937;
     }
-        .quote-text {
-            font-size: 36px;
-            font-style: italic;
-            font-weight: 300;
-            color: #1F2937;
+
+    .quote-author {
+        font-weight: 700;
+        font-size: 24px;
+        align-self: flex-end;
+    }
+
+.action-section {
+    min-height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20%;
+}
+
+    .action-container {
+        background-color: #3882F6;
+        padding: 50px 130px;
+        font-size: 20px;
+        color: #F9FAF8;
+        border-radius: 10px;
+        display: flex;
+        flex: 1;
+        justify-content: space-between;
+    }
+
+            .action-header {
+                font-weight: bold;
+                font-size: larger;
+            }
+
+        .action-button {
+            align-self: center;
         }
 
-        .quote-author {
-            font-weight: 700;
-            font-size: 24px;
-            align-self: flex-end;
+        .action-button button {
+            padding: 5px 30px;
+            font-size: inherit;
+            color: inherit;
+            background-color: inherit;
+            border: 2px solid #F9FAF8;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
+        .action-button button:hover {
+            background-color: #5c96f3;
+        }
+
+.footer-section {
+    min-height: 10vh;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+    .footer-text {
+        color: #E5E7EB;
+    }
